--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
 
 .container {
     display: flex;
+    position: relative;
     max-width: 1000px;
     margin: 20px auto;
     background-color: white;
@@ -23,6 +24,7 @@ body {
 }
 
 .right-column {
+    position: relative;
     width: 65%;
     padding: 40px;
 }
@@ -96,6 +98,7 @@ a {
     position: absolute;
     top: 10px;
     right: 10px;
+    z-index: 1000;
 }
 
 .language-selector button {
