--- a/index.css
+++ b/index.css
@@ -80,7 +80,7 @@ h2 {
 
 a {
     color: inherit;
-    text-decoration: none;
+    text-decoration: underline;
     transition: color 0.3s ease;
 }
 
