--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@ body {
 }
 
 .container {
-    display: flex;
     max-width: 1000px;
     margin: 20px auto;
     background-color: white;
@@ -16,14 +15,12 @@ body {
 }
 
 .left-column {
-    width: 35%;
     background-color: #2c3e50;
     color: white;
     padding: 40px;
 }
 
 .right-column {
-    width: 65%;
     padding: 40px;
 }
 
@@ -114,4 +111,49 @@ a {
 
 .language-selector button:hover {
     background-color: #2980b9;
+}
+
+/* Reszponzív design */
+@media screen and (min-width: 768px) {
+    .container {
+        display: flex;
+    }
+
+    .left-column {
+        width: 35%;
+    }
+
+    .right-column {
+        width: 65%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .left-column, .right-column {
+        width: 100%;
+        padding: 20px;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    .photo {
+        width: 120px;
+        height: 120px;
+    }
+
+    .skill {
+        font-size: 0.9em;
+    }
+
+    .language-selector {
+        position: static;
+        text-align: center;
+        margin-bottom: 20px;
+    }
 }
