--- a/index.css
+++ b/index.css
@@ -187,8 +187,21 @@ li .fas {
 }
 
 @media print {
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+    }
+    
     .container {
-        column-count: 2;
-        column-gap: 20px;
-      }    
-}
+      display: flex;
+      width: 100%;
+    }
+    
+    .left-column,
+    .right-column {
+      width: 50%;
+      padding: 40px;
+      box-sizing: border-box;
+    }
+  }
